--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -190,6 +190,7 @@
 		transition: color 0.2s ease, border-color 0.2s ease;
 		color: inherit;
 		text-decoration: none;
+		cursor: pointer;
 	}
 
 		a:before {
